Bug 398362 First menuitem is not selected when opening a menu for the first time r=enndeakin sr=bzbarsky